--- a/sample-qa-triton.ipynb
+++ b/sample-qa-triton.ipynb
@@ -5,12 +5,14 @@
    "id": "ec956136-688e-4981-a799-860ca96fa20c",
    "metadata": {},
    "source": [
-    "# RAG-a-thon Sample Application"
+    "# RAG-a-Thon Sample Application\n",
+    "\n",
+    "A RAG-a-Thon is a hackathon focused on RAG (Retrieval-Augmented Generation) use cases. A RAG application is inherently complex due to its multifaceted nature. It requires integrating various components and infrastructure to create a cohesive application. Tuning and optimizing the performance of RAG models is essential for improving their effectiveness in real-world applications. Below is a typical flow diagram for a RAG application: \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17859cb8-219d-4adf-b558-6da91ad7e853",
    "metadata": {},
    "outputs": [],
@@ -39,15 +41,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "id": "de82bdff-dd2e-44f1-bc45-332443835641",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /root/nltk_data...\n",
+      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting data from documents and chunking completed. Executed in 330.7220253944397 seconds\n"
+      "Extracting data from documents and chunking completed. Executed in 343.1030306816101 seconds\n"
      ]
     }
    ],
@@ -92,15 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4502fca6-4c81-4ce6-9ccb-cf54c67b12c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the embeddings for each chunk and loading it to Milvus Vector Store. Executed in 718.3033623695374 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "model_kwargs = {\"device\": \"cpu\"}\n",
     "encode_kwargs = {\"normalize_embeddings\": False}\n",
     "hf_embeddings = HuggingFaceEmbeddings(\n",
-    "    model_name=model_name,\n",
+    "    model_name=embedding_model_name,\n",
     "    model_kwargs=model_kwargs,\n",
     "    encode_kwargs=encode_kwargs,\n",
     ")\n",
@@ -129,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f4d25bc7-1a80-4766-b4e3-691af8560b82",
    "metadata": {},
    "outputs": [],
@@ -142,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "552c7f36-3d27-4334-ad02-69945ffa9b4e",
    "metadata": {},
    "outputs": [],
@@ -183,14 +206,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8a8d2d4c-c7fb-4e78-abb8-c4e34a088fc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question processed and answered in 0.6793711185455322 seconds\n",
+      "Output:\n",
+      "  Based on the provided documents, the total revenue of Apple in 2023 is $166,777 million.\n"
+     ]
+    }
+   ],
    "source": [
+    "retriever = vectorstore.as_retriever()\n",
     "chain = (\n",
     "    {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
-    "    | LLAMA_PROMPT\n",
+    "    | llama_prompt\n",
     "    | llm\n",
     ")\n",
     "start_time = time.time()\n",
@@ -199,7 +233,9 @@
     "for token in chain.stream(question):\n",
     "    output += token\n",
     "    \n",
-    "print(f\"Question processed and answered in {time.time() - start_time} seconds\")"
+    "print(f\"Question processed and answered in {time.time() - start_time} seconds\")\n",
+    "print(\"Output:\")\n",
+    "print(output)"
    ]
   },
   {
@@ -220,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "78822c95-051d-4e6e-8fe0-131765d9a8d6",
    "metadata": {},
    "outputs": [],
@@ -238,19 +274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4b831381-9aa3-4369-818f-ce4ca09876e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "qna_data = pd.read_csv(\"./qna_data.csv\")\n",
     "qna_data = qna_data[qna_data[\"Source Chunk Type\"] == \"Text\"]\n",
+    "\n",
+    "\n",
+    "# This single doc multi-chunk RAG is used for sample notebook only. For Hackathon, please use single doc and multiple documents.\n",
     "qna_data = qna_data[qna_data[\"Question Type\"] == \"Single-Doc Multi-Chunk RAG\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "id": "68b8454e-0763-4845-9b73-7bec2278bf8a",
    "metadata": {},
    "outputs": [],
@@ -284,10 +323,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "681a8acf-06a7-4547-8ffe-cf38132171f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|██████████| 112/112 [00:30<00:00,  3.65it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "context_precision    0.754960\n",
+       "faithfulness         0.479379\n",
+       "answer_relevancy     0.735310\n",
+       "context_recall       0.633929\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_eval = pd.DataFrame(_data, columns=[\"question\", \"ground_truth\", \"contexts\", \"answer\", \"inference_time\"])\n",
     "eval_dataset = Dataset.from_pandas(df_eval)\n",
@@ -307,6 +368,9 @@
    "id": "9d735306-7791-4903-a255-d67c257c8abe",
    "metadata": {},
    "source": [
+    "## Judging Criteria\n",
+    "RAG-a-Thon judging will be performed by Rafay & NVIDIA and will be based on 1) the performance and 2) the production readiness of your RAG application. Model performance depends on your underlying RAG strategy, which is typically a combination of data chunking, embedding, retrieval, and text generation models. The performance will be assessed using [Ragas open source library](https://github.com/explodinggradients/ragas) for evaluating RAG. Production readiness will be judged based on the top considerations described here, including: \n",
+    "\n",
     "## Submission.\n",
     "\n",
     "To submit your RAG application’s performance, perform the following two actions: \n",
