Fix email in the sample notebook

--- a/sample-qa-triton.ipynb
+++ b/sample-qa-triton.ipynb
@@ -375,7 +375,7 @@
     "\n",
     "To submit your RAG application’s performance, perform the following two actions: \n",
     "1. Take a screenshot of your metrics and post it on both Linkedin and X using the hashtag #RafayGTCRagaThon\n",
-    "2. Lastly, email the metrics along with the Jupyter Notebook with your implementation to [ragathon@rafay.ai](mailto:ragathon@rafay.ai)"
+    "2. Lastly, email the metrics along with the Jupyter Notebook with your implementation to [ragathon@rafay.co](mailto:ragathon@rafay.co)"
    ]
   },
   {
